-- Changed scene hierarchy to sort alphabetically. -- Added `Item` and `Interactable` layers. -- Added `Stats.cs` defining all the stats a (fighter) entity can have. -- Added `Entity.cs` holding data shared between characters and enemies. -- Added `Item.cs` holding data and functions related to items. -- Added `CollisionManager.cs` handling player interactions with other objects. -- Added `Team.cs` currently just holding an array of `Entity`. -- Added `Inventory.cs` holding a `Dictionary<Item,int>` (value is the amount). -- Updated `Player` prefab. -- Added `Health Potion` prefab as an example of an item.

--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -62,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Code\Move.cs" />
+    <Compile Include="Assets\Code\Item.cs" />
+    <Compile Include="Assets\Code\Stats.cs" />
+    <Compile Include="Assets\Code\Team.cs" />
+    <Compile Include="Assets\Code\Inventory.cs" />
+    <Compile Include="Assets\Code\CollisionManager.cs" />
+    <Compile Include="Assets\Code\Entity.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
