--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -61,35 +61,31 @@
     <Analyzer Include="E:\Programs\Unity\6000.0.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Code\Enemies.cs" />
-    <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
+    <Compile Include="Assets\Code\Interfaces\AttacksMenu.cs" />
     <Compile Include="Assets\Code\ShopItem.cs" />
     <Compile Include="Assets\Code\Script.cs" />
-    <Compile Include="Assets\Code\ViewController.cs" />
-    <Compile Include="Assets\Code\Move.cs" />
+    <Compile Include="Assets\Code\Chest.cs" />
+    <Compile Include="Assets\Code\Profiles\Enemies.cs" />
     <Compile Include="Assets\Code\Warp.cs" />
     <Compile Include="Assets\Code\Interfaces\InvetoryController.cs" />
-    <Compile Include="Assets\Code\Stats.cs" />
-    <Compile Include="Assets\Code\Bot.cs" />
-    <Compile Include="Assets\Code\Team.cs" />
     <Compile Include="Assets\Code\WaterStep.cs" />
     <Compile Include="Assets\Code\AreaCheck.cs" />
-    <Compile Include="Assets\Code\Battle.cs" />
     <Compile Include="Assets\Code\Inventory.cs" />
-    <Compile Include="Assets\AttacksMenu.cs" />
-    <Compile Include="Assets\Code\CollisionManager.cs" />
-    <Compile Include="Assets\BattleButtonsController.cs" />
-    <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
-    <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
-    <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
-    <Compile Include="Assets\Code\Entity.cs" />
+    <Compile Include="Assets\Code\Entity\Interact.cs" />
+    <Compile Include="Assets\Code\Profiles\Skills.cs" />
     <Compile Include="Assets\Code\Interfaces\MainMenu.cs" />
-    <Compile Include="Assets\Code\Items.cs" />
+    <Compile Include="Assets\Code\Entity\Stats.cs" />
+    <Compile Include="Assets\Code\Profiles\Team.cs" />
     <Compile Include="Assets\Code\Interfaces\InformationsDisplay.cs" />
-    <Compile Include="Assets\Code\Interact.cs" />
+    <Compile Include="Assets\Code\Battle\Battle.cs" />
+    <Compile Include="Assets\Code\Battle\Bot.cs" />
+    <Compile Include="Assets\Code\Entity\Entity.cs" />
+    <Compile Include="Assets\Code\Interfaces\ViewController.cs" />
     <Compile Include="Assets\Code\Float.cs" />
-    <Compile Include="Assets\Chest.cs" />
-    <Compile Include="Assets\Code\Skills.cs" />
+    <Compile Include="Assets\Code\Interfaces\BattleButtonsController.cs" />
+    <Compile Include="Assets\Code\Entity\Move.cs" />
+    <Compile Include="Assets\Code\Entity\CollisionManager.cs" />
+    <Compile Include="Assets\Code\Profiles\Items.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
